<resources>
    <!-- Actividad Principal -->
    <string name="navigation_drawer_open">Abrir menú</string>
    <string name="navigation_drawer_close">Cerrar menú</string>

    <string name="app_name">Mis Hábitos</string>
    <string name="titulo_tareas">Tareas Por Hacer</string>
    <string name="frase_dia">Frase del día:</string>
    <string name="contenedor_frases">Frases</string>


    <string name="btn_otra_frase">🔄 Otra frase</string>
    <string name="btn_ver_progreso">📊 Ver progreso</string>
    <string name="btn_historial">📋 Historial de tareas</string>

    <string name="agregar_tarea">Agregar Tarea</string>
    <string name="editar_tarea">Editar Tarea</string>
    <string name="confirmar_tarea">Confirmar Tarea</string>

    <!-- Actividad Agregar Tarea -->
    <string name="titulo_crear_tarea">Crear Tarea</string>
    <string name="nombre_habito">Nombre de hábito</string>
    <string name="detalles_habito">Detalles del hábito</string>
    <string name="dias_titulo">Días</string>
    <string name="alarma_titulo">Alarma</string>

    <string name="btn_agregar_tarea">Agregar Tarea</string>
    <string name="btn_cancelar_tarea">Cancelar Tarea</string>


    <!-- Actividad Inicio Session -->
    <string name="titulo_inicio_sesion">Iniciar Sesión</string>
    <string name="sub_usuario">usuario</string>
    <string name="sub_contrasena">contraseña</string>
    <string name="texto_no_cuenta">¿No tienes cuenta? </string>
    <string name="texto_registrate"> Regístrate</string>
    <string name="icon_google">Google</string>
    <string name="icon_facebook">Facebook</string>

    <!-- Actividad Boton Habito -->
    <string name="btn_guardar_habito">Guardar Cambios</string>
    <string name="btn_eliminar_habito">Eliminar Hábito</string>
    <string name="btn_volver">Volver</string>
    <string name="sin_registros">No hay registros aún</string>
    <string name="nombre_usu">Nombre</string>
    <string name="apellido_paterno_usu">Apellido Paterno</string>
    <string name="apellido_materno_usu">Apellido Materno</string>
    <string name="correo_usu">Correo</string>
    <string name="contraseña_usu">Contraseña</string>
    <string name="fecha_de_nacimiento_usu">Fecha de Nacimiento</string>
    <string name="btn_registrar">Registrar</string>
    <string name="btn_cancelar">Cancelar</string>
    <string name="nombre_del_habito">Nombre del Hábito</string>
    <string name="descripcion_habito">Descripción breve del hábito</string>
    <string name="btn_editar">Editar</string>
    <string name="btn_completar">Completar</string>
    <string name="btn_editar_datos">Editar datos</string>
    <string name="fecha_de_nacimiento_perfilusu">Fecha de nacimiento</string>

</resources>